# pokedex

./: .gitignore  README.md  fix_data.py  pyproject.toml
backend/: app.py
frontend/: app.js  index.html  package-lock.json  style.css
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Header.jsx  PokemonCard.jsx  PokemonDetail.jsx  PokemonGrid.jsx  SearchFilters.jsx  TypeChart.jsx  VersionData.jsx
scripts/: add_version_data.py  fetch_data.py  fetch_version_data.py  seed_anime_data.py  seed_anime_data_expanded.py
src/pokedex/: __init__.py  cli.py  db.py  fetcher.py
